<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="360dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp">

        <ImageView
            android:id="@+id/previous_order_item_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.70"
            android:scaleType="centerCrop"
            android:src="@drawable/restaurant_menu_img" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/order_completed_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_check_box"
                android:text="@string/order_completed"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/order_completed_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/order_completed_tv"
                android:layout_marginStart="20dp"
                android:text="@string/order_completed_time" />

            <TextView
                android:id="@+id/order_id_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/order_completed_time_tv"
                android:layout_marginStart="20dp"
                android:text="@string/order_id" />

            <Button
                android:id="@+id/previous_order_rate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round_border_fill_color"
                android:padding="10dp"
                android:text="@string/rate_order"
                android:textColor="@color/white" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:alpha=".5"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/previous_order_item_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/order_completed_list" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:alpha=".5"
            android:background="@color/gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <TextView
                android:id="@+id/reorder_total_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/order_completed_total"
                android:textStyle="bold" />

            <Button
                android:id="@+id/previous_order_reorder_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/round_border_fill_transparent_bg"
                android:text="@string/re_order"
                android:textColor="@color/gray" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>