<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_whit">

    <androidx.cardview.widget.CardView
        android:id="@+id/all_restaurant_cv"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardElevation="3dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="14.5">

            <LinearLayout
                android:id="@+id/restaurant_info_lo_01"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/restaurant_logo_iv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/restaurant_logo_shape"
                    android:elevation="5dp"
                    android:src="@drawable/restaurant_logo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/restaurant_name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurant_name"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/restaurant_main_item_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurant_main_item" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|center"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/restaurant_menu_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:background="@drawable/menu_button_shape"
                        android:text="@string/restaurant_menu"
                        android:textColor="@color/orange" />
                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:id="@+id/restaurant_main_item_iv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/restaurant_menu_img"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5">

                <TextView
                    android:id="@+id/favorite_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:drawableStart="@drawable/ic_favorite"
                    android:text="@string/favorite"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/rating_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerInParent="true"
                    android:drawableStart="@drawable/ic_star"
                    android:text="@string/rating" />

                <TextView
                    android:layout_centerVertical="true"
                    android:drawablePadding="2dp"
                    android:id="@+id/open_close_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:drawableStart="@drawable/ic_open_close"
                    android:text="@string/open_close_time" />

            </RelativeLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>