<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Profile">


    <!--Profile image, name and email -->
    <LinearLayout
        android:id="@+id/linearLayout_01"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/profile_img_container"
            android:layout_width="96dp"
            android:layout_height="96dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profile_image"
                app:civ_border_color="@color/orange"
                app:civ_border_width="1dp"
                android:layerType="software"
                android:backgroundTint="@color/white"
                android:background="@color/white"
                android:elevation="5dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textAllCaps="true"
                android:textColor="@color/orange"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/orange"
                android:textSize="13sp"
                android:textStyle="normal" />


        </LinearLayout>


    </LinearLayout>

    <!--Oder Information and Personal Information-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearLayout_01"
        android:orientation="vertical"
        android:weightSum="2">

        <!--Oder Information-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:drawableStart="@drawable/ic_all_my_orders"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:drawablePadding="20dp"
                    android:gravity="center|start"
                    android:text="@string/all_my_orders"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:drawableStart="@drawable/ic_wishlist"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:drawablePadding="20dp"
                    android:gravity="center|start"
                    android:text="@string/wish_list"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:drawableStart="@drawable/ic_pending_payments"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:drawablePadding="20dp"
                    android:gravity="center|start"
                    android:text="@string/pending_payments"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:drawableStart="@drawable/ic_finished_orders"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:drawablePadding="20dp"
                    android:gravity="center|start"
                    android:text="@string/finished_orders"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--Personal Information-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            android:elevation="5dp"
            app:cardElevation="5dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:weightSum="4">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:drawableStart="@drawable/ic_account_information"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:drawablePadding="20dp"
                    android:gravity="center|start"
                    android:text="@string/account_information"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:drawableStart="@drawable/ic_address"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:drawablePadding="20dp"
                    android:gravity="center|start"
                    android:text="@string/my_address"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:drawableStart="@drawable/ic_faqs"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:drawablePadding="20dp"
                    android:gravity="center|start"
                    android:text="@string/faqs"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:drawableStart="@drawable/ic_about_us"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    android:drawablePadding="20dp"
                    android:gravity="center|start"
                    android:text="@string/about_us"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</RelativeLayout>