<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/home_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center|start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now"
                android:textColor="@color/light_orange" />

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/gray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_my_current_location" />

            <TextView
                android:id="@+id/homeLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/current_location" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/search_la"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_toolbar"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:elevation="2dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/homeSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:hint="@string/search_restaurant"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:drawableStart="@drawable/ic_search"
            android:gravity="center"
            android:textSize="17sp"
            android:drawablePadding="-20dp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_restaurant_rv"
        android:layout_below="@id/search_la"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/all_restaurant_view"/>

</RelativeLayout>